syntax = "proto3"; 
package snowflake;
option go_package = "proto";

service Snowflake {
    rpc Next(NextRequest) returns (NextReply) {}
}

message NextRequest {
    int64 serviceId = 1;  // service id
}

message NextReply {
    int64 id = 1;  // snowflake id
}
